// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`actions/alerts > hideAlert > should return an action 1`] = `
{
  "payload": "test",
  "type": "ALERTS_HIDE",
}
`;

exports[`actions/alerts > showAlert > should return an action with type \`error\` 1`] = `
{
  "meta": undefined,
  "payload": {
    "icon": "info-o",
    "id": "test",
    "message": "Alright!",
    "position": "bottom-right",
    "timeout": 0,
    "type": "error",
  },
  "type": "ALERTS_SHOW",
}
`;

exports[`actions/alerts > showAlert > should return an action with type \`success\` 1`] = `
{
  "meta": undefined,
  "payload": {
    "icon": "info-o",
    "id": "test",
    "message": "Alright!",
    "position": "bottom-right",
    "timeout": 10,
    "type": "success",
  },
  "type": "ALERTS_SHOW",
}
`;
